feat: created a framework for a visualization microservice without implementing the visualizations themselves
